# ally-ai

./: .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.baremetal  LICENSE  Makefile  README.md  docker-compose.full.yml  docker-compose.local.yml  docker-compose.yml  env_sample  pyproject.toml
.github/: RELEASE_GUIDE.md  pull_request_template.md
.github/actions/run-migration/: action.yaml
.github/workflows/: lambda-ai-transcription-lambda.yml  main.yaml  production-release.yaml  secret-scan.yml
app/: main.py  middleware.py
app/api/: root.py
app/api/v1/: api.py
app/clients/: ally_core.py
app/core/: config.py  constants.py  dependencies.py  execution_manager.py  http.py  phi_events.py  phi_logger.py
app/core/ally_core/: __init__.py  client.py  service.py
app/core/conversations/: conversation_service.py
app/core/drift/: __init__.py  judge.py  prompt.py  schemas.py
app/core/embeddings/: base.py  openai_embedding_client.py  openai_embedding_service.py
app/core/llm_usage/: __init__.py  emitter.py  extract.py  tasks.py
app/exceptions/: custom_exceptions.py
app/migrations/: 000-create_migration_history_table.py  001-create-conversation-collection.py  002-create-reference-document-collection.py  __init__.py  manager.py
app/prompts/: manager.py  resolver.py
app/schemas/: common.py  conversation.py  health.py  reference_document.py  summary.py  transcription.py
app/tests/: TESTING_SETUP.md  conftest.py  run_tests.py
app/utils/: affirmation_counter.py  audio_converter.py  client_positivity_lift_calculator.py  common.py  counselor_interruption_calculator.py  language_detector.py  logger.py  rate_limiter.py  reflective_listening_calculator.py  silence_calculator.py  startup.py  structured_model_converter.py  utterance_duration_calculator.py
scripts/: bootstrap_localstack.sh  drift_judge_smoke.py  migrate.py  sync_prompts.py
tests/: TESTING_SETUP.md  conftest.py  pytest.ini  run_tests.py  test_main.py
tests/api/: conftest.py
tests/clients/: test_ally_core.py
tests/core/: __init__.py
tests/migrations/: __init__.py  test_000_create_migration_history_table.py  test_001_create_conversation_collection.py  test_002_create_reference_document_collection.py  test_migration_manager.py
tests/utils/: test_client_positivity_lift_calculator.py  test_common.py  test_counselor_interruption_calculator.py  test_language_detector.py  test_reflective_listening_calculator.py  test_silence_calculator.py  test_structured_model_converter.py  test_utterance_duration_calculator.py
(+140 files in other folders)
