[tool.poetry]
name = "lifeline-ai"
version = "0.1.0"
description = ""
authors = ["risal-kv <risal@keyvalue.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic-settings = "^2.7.1"
contextvars = "^2.4"
uvicorn = "^0.34.0"
weaviate-client = "^4.11.0"
langchain-openai = "^0.3.6"
slack-sdk = "^3.35.0"


[tool.poetry.group.dev.dependencies]
aiohttp = "^3.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
